fixed invisible checkbox error

--- a/app/assets/stylesheets/overrides.scss
+++ b/app/assets/stylesheets/overrides.scss
@@ -508,3 +508,15 @@ li.address {
 .list_head {
   padding-left: 0.75rem;
 }
+
+#visible_checkbox {
+  display: block;
+  opacity: 100;
+  height: 20px;
+  width: 20px;
+  position: relative;
+}
+
+.purchased-field {
+  margin-top: 10px;
+}
